--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ember-paper": "^1.0.0-beta.3",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.15.0",
+    "ember-truth-helpers": "^1.3.0",
     "ember-welcome-page": "^3.0.0",
     "liquid-fire": "^0.28.0",
     "loader.js": "^4.2.3"
