--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ember-load-initializers": "^1.0.0",
     "ember-paper": "^1.0.0-beta.3",
     "ember-resolver": "^4.0.0",
+    "ember-route-action-helper": "^2.0.6",
     "ember-source": "~2.15.0",
     "ember-truth-helpers": "^1.3.0",
     "ember-welcome-page": "^3.0.0",
