--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "~2.15.0",
     "ember-export-application-global": "^2.0.0",
+    "ember-group-by": "0.0.5",
     "ember-href-to": "^1.13.0",
     "ember-load-initializers": "^1.0.0",
     "ember-paper": "^1.0.0-beta.3",
