updated a lot of bugs in the blog

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ember-export-application-global": "^2.0.0",
     "ember-group-by": "0.0.5",
     "ember-href-to": "^1.13.0",
+    "ember-img-lazy": "^2.0.2",
     "ember-load-initializers": "^1.0.0",
     "ember-paper": "^1.0.0-beta.3",
     "ember-resolver": "^4.0.0",
